tests/snapshots/parser__fn_decl__anonymous_fn_as_statement.snap
---
source: tests/parser.rs
expression: "parse(\"fn(x) { x }\")"
---
Ok(
    [
        Expr(
            Fn {
                params: [
                    "x",
                ],
                body: [
                    Expr(
                        Identifier(
                            "x",
                            Span {
                                start: 8,
                                end: 9,
                            },
                        ),
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 11,
                },
            },
        ),
    ],
)
