tests/snapshots/parser__fn_decl__empty_params_with_newline.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(\\n) { }\")"
---
Ok(
    [
        Fn {
            name: "f",
            params: [],
            body: [],
            span: Span {
                start: 0,
                end: 11,
            },
        },
    ],
)
