tests/snapshots/parser__fn_decl__newline_after_comma.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(a,\\n  b) { }\")"
---
Ok(
    [
        Fn {
            name: "f",
            params: [
                "a",
                "b",
            ],
            body: [],
            span: Span {
                start: 0,
                end: 16,
            },
        },
    ],
)
