tests/snapshots/parser__fn_decl__newline_after_open_paren.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(\\n  a, b) { }\")"
---
Ok(
    [
        Fn {
            name: "f",
            params: [
                "a",
                "b",
            ],
            body: [],
            span: Span {
                start: 0,
                end: 17,
            },
        },
    ],
)
