tests/snapshots/parser__fn_decl__newline_before_close_paren_with_trailing_comma.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(a,\\n) { }\")"
---
Ok(
    [
        Fn {
            name: "f",
            params: [
                "a",
            ],
            body: [],
            span: Span {
                start: 0,
                end: 13,
            },
        },
    ],
)
