tests/snapshots/parser__fn_decl__trailing_comma_in_params.snap
---
source: tests/parser.rs
expression: "parse(\"fn id(x,) { x }\")"
---
Ok(
    [
        Fn {
            name: "id",
            params: [
                "x",
            ],
            body: [
                Expr(
                    Identifier(
                        "x",
                        Span {
                            start: 12,
                            end: 13,
                        },
                    ),
                ),
            ],
            span: Span {
                start: 0,
                end: 15,
            },
        },
    ],
)
